# demand_forecast_tutorial

./: README.md  pyproject.toml
src/input_schema/: sales.py
src/preprocess/models/: day_of_week.py  items.py  sales.py  stores.py  weekly_sales.py
