[tool.poetry]
name = "demand-forecast-tutorial"
version = "0.1.0"
description = ""
authors = ["kai-5908 <dolce.cantabile.maestoso@gmail.com>"]
readme = "README.md"
packages = [{include = "demand_forecast_tutorial"}]

[tool.poetry.dependencies]
python = "^3.10"
polars = "^0.18.4"
patito = "^0.5.0"
scikit-learn = "^1.3.0"
lightgbm = "^3.3.5"
plotly = "^5.15.0"
streamlit = "^1.24.0"
pytest = "^7.4.0"
black = "^23.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
